# nix-rust-wrangler

./: .gitignore  README.md  flake.nix
lib/: default.nix  toolchain-instance.nix  version.nix
package/: overlay.nix
package/wrangler/: Cargo.toml  package.nix
package/wrangler/src/: error.rs  invocation.rs  main.rs
package/wrangler/src/collection/: mod.rs
package/wrangler/src/invoker/: external.rs  mod.rs
package/wrangler/src/nix/: config.rs  flake.rs  inspect-flake.nix  mod.rs  proxy.rs
package/wrangler/src/util/: mod.rs
