[package]
name = "nix-rust-wrangler"
version = "0.1.0"
edition = "2021"
description = "Rustup but declarative"

[dependencies]
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }

serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.135"

thiserror = "2.0.11"
